Completed the Home page and about page

--- a/about.html
+++ b/about.html
@@ -1,14 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
-    <link href="css/bootstrap.min.css" rel="stylesheet" >
+    <title>About The Firm</title>
+    <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 </head>
+
 <body>
-   
+    <div class="head">
+        <img class="logo" src="https://maxfund.org/userfiles/1172/gallery/maxfund-cat-dog-logo.png?t=27094">
+        <h1 class="h1">About The Firm</h1>
+        <ul class="navbar">
+            <li><a href="home.html"> Home </a></li>
+            <li><a href="about.html"> About us</a></li>
+            <li><a href="contact.html"> Contact us</a></li>
+            <li><a href="profile.html"> Adopt </a></li>
+        </ul>
+    </div>
+    <br>
+    <p>
+        Bibys Animal Shelter, established in 1972, is an organization where <em>“people help animals and animals
+            help people.”</em> This unique nonprofit organization benefits the community by providing educational and
+        therapeutic
+        programs for people, as well as humane care and adoption for homeless animals.
+    </p>
+    <br>
+    <br>
+
+    <div class="mission">
+        <h3>Our Mission</h3>
+        <p>
+            <b>
+                <a href="home.html">Biby's Animal Shelter </a>passionate belief that animals help people and people help animals,
+                through trust, unconditional love, and respect, creates a legacy of caring. Sharing this philosophy with
+                others, the Center inspires and teaches, locally and globally, the importance of the animal-human bond.
+            </b>
+            <br>
+            <br/>
+
+            <a href="home.html">Biby's Animal Shelter </a> is a unique, private non-profit organization in San Diego County that has been
+            committed to the philosophy of people helping animals and animals helping people for over 45 years. Located
+            on 12 acres in Rancho Santa Fe, California, our nationally recognized Center provides a variety of services
+            that benefit the community through educational and therapeutic programs for people, and humane care and
+            adoption for animals.
+            <br>
+            <br/>
+            We are a no-kill facility that receives no government funding and relies heavily on tax-deductible
+            contributions from private donors to continue our life-saving mission.
+        </p>
+    </div>
 </body>
+
 </html>
