completed the contact page and added some navbar contents

--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>Contact The Firm</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 </head>
@@ -13,15 +13,43 @@
 <body>
     <div class="head">
         <img class="logo" src="https://maxfund.org/userfiles/1172/gallery/maxfund-cat-dog-logo.png?t=27094">
-        <h1 class="h1">Biby's Animal shelter</h1>
+        <h1 class="h1">Contact The Firm</h1>
         <ul class="navbar">
             <li><a href="home.html"> Home </a></li>
             <li><a href="about.html"> About us</a></li>
             <li><a href="contact.html"> Contact us</a></li>
-            <li><a href="profile.html"> Adopt </a></li>
+            <li><a href="profile.html"> Profile pages</a></li>
         </ul>
     </div>
-   
+    <div id="contact">
+        <h3 id="contact">Animal Emergencies</h3>
+        <p class="number">
+            <b>CALL: 202-723-5780 — AVAILABLE 24/7</b>
+        </p>
+        <h3 id="contact">Report Cruelty/Neglect</h3>
+        <p class="number">
+            <b>CALL: 202-723-5780 — AVAILABLE 24/7</b>
+        </p>
+        <h3 id="contact">Lost or Found Pet</h3>
+        <p class="number">
+            <b>CALL: 202-723-5780 — AVAILABLE 24/7</b>
+        </p>
+        <h3 id="contact">Wildlife Conflict</h3>
+        <p class="number">
+            <b>CALL: 202-723-5780 — AVAILABLE 24/7</b>
+        </p>
+        <h3 id="contact">Adoption</h3>
+        <p class="number">
+            <b>CALL: 202-723-5780 — AVAILABLE 24/7</b>
+            <br>
+            <a href="about.html">Click here</a> to see a few adoptable pets
+        </p>
+        <h3 id="contact">Report Cruelty/Neglect</h3>
+        <p class="number">
+            <b>CALL: 202-723-5780 — AVAILABLE 24/7</b>
+        </p>
+
+    </div>
 </body>
 
 
