--- a/profile.html
+++ b/profile.html
@@ -18,10 +18,11 @@
             <li><a href="home.html"> Home </a></li>
             <li><a href="about.html"> About us</a></li>
             <li><a href="contact.html"> Contact us</a></li>
-            <li><a href="profile.html"> Adopt </a></li>
+            <li><a href="profile.html">Profile pages</a></li>
         </ul>
     </div>
-   
+   <h3>Riley</h3>
+   <a></a>
 </body>
 
 </html>
