Finished the Individual animal profiles

--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
         <p class="number">
             <b>CALL: 202-723-5780 — AVAILABLE 24/7</b>
             <br>
-            <a href="about.html">Click here</a> to see a few adoptable pets
+            <a href="profile.html">Click here</a> to see a few adoptable pets
         </p>
         <h3 id="contact">Report Cruelty/Neglect</h3>
         <p class="number">
