--- a/profile.html
+++ b/profile.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>Animal Profiles</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 </head>
@@ -13,7 +13,7 @@
 <body>
     <div class="head">
         <img class="logo" src="https://maxfund.org/userfiles/1172/gallery/maxfund-cat-dog-logo.png?t=27094">
-        <h1 class="h1">Biby's Animal shelter</h1>
+        <h1 class="h1">Animal Profiles</h1>
         <ul class="navbar">
             <li><a href="home.html"> Home </a></li>
             <li><a href="about.html"> About us</a></li>
